--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
     // ---------- Google Sheet Config ----------
     const sheetId = '17k06sKH7b8LETZIpGP7nyCC7fmO912pzJQEx1P538CA';
     const sheetGid = '0';
-    const range = 'C6:Y107'; // EXTENDED range to include new AlphaScore columns
+    // UPDATED: Range extended to column AA for Quartile data
+    const range = 'C6:AA107'; 
     const sheetUrl = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&gid=${sheetGid}&range=${range}`;
     const REFRESH = 5 * 60 * 1000; // 5 min
 
@@ -213,7 +214,7 @@
     // ---------- State ----------
     let master = [];
     let view = [];
-    let currentSort = { key: 'alphaScore', dir: 'desc' }; // UPDATED default sort
+    let currentSort = { key: 'alphaScore', dir: 'desc' };
     let currentUser = null;
     let userWatchlist = new Set();
     let currentView = 'all'; // 'all' or 'watchlist'
@@ -234,10 +235,11 @@
           company: gv(0), ticker: gv(1), industry: gv(2), sector: gv(3),
           ceo: gv(5), founder: gv(6), compensation: gn(7), equityTransactions: gv(8),
           tsrValue: gn(13), tenure: gn(14), avgAnnualTsr: gn(15), compensationCost: gn(16),
-          // ADDED new AlphaScore fields
-          tsrAlpha: gn(18), // Column U
-          avgAnnualTsrAlpha: gn(19), // Column V
-          alphaScore: gn(22) // Column Y
+          tsrAlpha: gn(18),
+          avgAnnualTsrAlpha: gn(19),
+          alphaScore: gn(22),
+          // ADDED: Quartile from column AA (index 24)
+          quartile: gv(24) 
         };
       });
     }
@@ -352,7 +354,17 @@
       data.forEach(c => {
         const saved = userWatchlist.has(c.ticker);
         const card = document.createElement('div');
-        card.className = 'bg-white border border-gray-200 rounded-lg p-4 shadow-sm flex flex-col justify-between hover:shadow-md transition-shadow';
+        
+        // UPDATED: Quartile color-coding logic based on user feedback
+        let quartileColorClass = 'border-gray-200';
+        switch(c.quartile) {
+            case 'Top Quartile': quartileColorClass = 'border-green-500'; break;
+            case '3rd Quartile': quartileColorClass = 'border-orange-500'; break;
+            case '2nd Quartile': quartileColorClass = 'border-yellow-500'; break;
+            case 'Bottom Quartile': quartileColorClass = 'border-red-500'; break;
+        }
+
+        card.className = `bg-white border-l-4 ${quartileColorClass} rounded-lg p-4 shadow-sm flex flex-col justify-between hover:shadow-md transition-shadow`;
         const founder = (c.founder?.toUpperCase() === 'Y') ? '<span class="ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">Founder</span>' : '';
         const filings = c.equityTransactions ? `<a href="${c.equityTransactions}" target="_blank" class="text-blue-600 hover:underline">View Filings</a>` : '<span class="text-gray-400">N/A</span>';
         const tsrCol = c.tsrValue >= 0 ? 'text-green-600' : 'text-red-600';
@@ -362,9 +374,12 @@
         const alphaScoreValue = c.alphaScore * 100;
         const alphaScoreColor = 'text-blue-600';
 
+        // Quartile display element (styles will be applied based on quartileColorClass)
+        const quartileBadge = c.quartile ? `<div class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full ${quartileColorClass.replace('border', 'bg').replace('-500', '-100')} ${quartileColorClass.replace('border', 'text')}">${c.quartile}</div>` : '';
+
         card.innerHTML = `
           <div>
-            <div class="flex justify-between items-start mb-4">
+            <div class="flex justify-between items-start mb-2">
               <div class="flex-1">
                 <h3 class="font-bold text-lg text-gray-900">
                   ${c.ceo}
@@ -378,7 +393,8 @@
                 <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${Math.round(alphaScoreValue)}</p>
               </div>
             </div>
-            <div class="mt-4 space-y-2 text-sm">
+            <div class="flex justify-end mb-4">${quartileBadge}</div>
+            <div class="space-y-2 text-sm">
               <div class="flex justify-between"><span class="text-gray-500">TSR During Tenure</span><span class="font-bold ${tsrCol}">${pct(c.tsrValue)}</span></div>
               <div class="flex justify-between"><span class="text-gray-500">TSR vs. QQQ</span><span class="font-bold ${tsrAlphaCol}">${pct(c.tsrAlpha)}</span></div>
               <div class="flex justify-between"><span class="text-gray-500">Avg Annual TSR</span><span class="font-bold ${avgCol}">${pct(c.avgAnnualTsr)}</span></div>
@@ -563,7 +579,7 @@
           return;
         }
         
-        const headers = ['CEO', 'Company', 'Ticker', 'AlphaScore', 'TSR Alpha', 'Avg Annual TSR Alpha', 'Industry', 'Sector', 'TSR During Tenure', 'Avg Annual TSR', 'Compensation ($MM)', 'Comp Cost / 1% Avg TSR ($MM)', 'Tenure (yrs)', 'Founder'];
+        const headers = ['CEO', 'Company', 'Ticker', 'AlphaScore', 'AlphaScore Quartile', 'TSR Alpha', 'Avg Annual TSR Alpha', 'Industry', 'Sector', 'TSR During Tenure', 'Avg Annual TSR', 'Compensation ($MM)', 'Comp Cost / 1% Avg TSR ($MM)', 'Tenure (yrs)', 'Founder'];
         const csvContent = [
           headers.join(','),
           ...view.map(c => [
@@ -571,6 +587,7 @@
             `"${c.company}"`,
             c.ticker,
             c.alphaScore,
+            c.quartile,
             c.tsrAlpha,
             c.avgAnnualTsrAlpha,
             `"${c.industry || ''}"`,
