--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                   <button class="watchlist-star text-2xl align-middle mx-2 -mt-1 transition-colors ${saved ? 'text-yellow-400 hover:text-yellow-500' : 'text-gray-300 hover:text-yellow-400'}" data-ticker="${c.ticker}" title="${saved ? 'Remove from' : 'Add to'} watchlist">${saved ? '★' : '☆'}</button>
                   ${founder}
                 </h3>
-                <p class="text-sm text-gray-600">${c.company} (${c.ticker})</p>
+                <p class="text-sm text-gray-600 font-bold">${c.company} (${c.ticker})</p>
               </div>
               <div class="text-right pl-2 flex flex-col items-end flex-shrink-0">
                 <div>
