--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
         let quartileColorClass = 'border-gray-200';
         switch(c.quartile) {
             case 'Top Quartile': quartileColorClass = 'border-green-500'; break;
-            case '3rd Quartile': quartileColorClass = 'border-orange-500'; break;
-            case '2nd Quartile': quartileColorClass = 'border-yellow-500'; break;
+            case '3rd Quartile': quartileColorClass = 'border-yellow-500'; break;
+            case '2nd Quartile': quartileColorClass = 'border-orange-500'; break;
             case 'Bottom Quartile': quartileColorClass = 'border-red-500'; break;
         }
 
