--- a/index.html
+++ b/index.html
@@ -366,6 +366,23 @@
 
         card.className = `bg-white border-l-4 ${quartileColorClass} rounded-lg p-4 shadow-sm flex flex-col justify-between hover:shadow-md transition-shadow`;
         const founder = (c.founder?.toUpperCase() === 'Y') ? '<span class="ml-2 inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">Founder</span>' : '';
+
+        // UPDATED HTML for the modal header to include the image
+        modalHeader.innerHTML = `
+          <div class="flex items-start gap-4">
+            <div class="flex-shrink-0">
+            </div>
+
+            <div class="flex-1">
+              <h3 class="font-bold text-xl text-gray-900 flex items-center">
+                ${c.ceo}
+                <button class="watchlist-star text-2xl align-middle mx-2 -mt-1 transition-colors ${saved ? 'text-yellow-400 hover:text-yellow-500' : 'text-gray-300 hover:text-yellow-400'}" data-ticker="${c.ticker}" title="${saved ? 'Remove from' : 'Add to'} watchlist">${saved ? '★' : '☆'}</button>
+              </h3>
+              <p class="text-sm text-gray-600 font-bold">${c.company} (${c.ticker})</p>
+              ${founder}
+            </div>
+          </div>`;
+        
         const filings = c.equityTransactions ? `<a href="${c.equityTransactions}" target="_blank" class="text-blue-600 hover:underline">View Filings</a>` : '<span class="text-gray-400">N/A</span>';
         const tsrCol = c.tsrValue >= 0 ? 'text-green-600' : 'text-red-600';
         const avgCol = c.avgAnnualTsr >= 0 ? 'text-green-600' : 'text-red-600';
