--- a/index.html
+++ b/index.html
@@ -404,7 +404,8 @@
             case 'Bottom Quartile': quartileColorClass = 'border-red-500'; break;
         }
 
-        card.className = `ceo-card bg-white border-l-4 ${quartileColorClass} rounded-lg p-4 shadow-sm hover:shadow-md transition-shadow cursor-pointer flex flex-col justify-between`;
+        // Add 'relative' to the card's class list for positioning the star
+        card.className = `ceo-card relative bg-white border-l-4 ${quartileColorClass} rounded-lg p-4 shadow-sm hover:shadow-md transition-shadow cursor-pointer flex flex-col justify-between`;
         
         const alphaScoreValue = c.alphaScore * 100;
         const alphaScoreColor = 'text-blue-600';
@@ -420,6 +421,10 @@
 
         card.innerHTML = `
           <div>
+            <div class="absolute top-2 right-2">
+                ${watchlistStar}
+            </div>
+
             <div class="flex justify-between items-start space-x-2">
               <div class="flex-1 min-w-0">
                 <div class="flex items-center">
@@ -429,8 +434,7 @@
                 <p class="text-sm text-gray-600 font-bold truncate" title="${c.company} (${c.ticker})">${c.company} (${c.ticker})</p>
               </div>
               
-              <div class="flex flex-col items-end flex-shrink-0">
-                ${watchlistStar}
+              <div class="flex flex-col items-end flex-shrink-0 mr-8">
                 <div class="mt-1">
                   <p class="text-xs text-gray-800 font-bold uppercase tracking-wider">AlphaScore</p>
                   <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${Math.round(alphaScoreValue)}</p>
