--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           ${c.ceo}
           ${founder}
         </h3>
-        <p class="text-sm text-gray-600 font-bold mt-1">${c.company} (${c.ticker}) <span class="text-gray-500 font-medium">&bull; Market Cap: ${formatMarketCap(c.marketCap)}</span></p>`;
+        <p class="text-sm text-gray-600 font-bold mt-1">${c.company} (${c.ticker}) <span class="text-gray-500 font-bold">&bull; Market Cap: ${formatMarketCap(c.marketCap)}</span></p>`;
 
       const tsrCol = c.tsrValue >= 0 ? 'text-green-600' : 'text-red-600';
       const avgCol = c.avgAnnualTsr >= 0 ? 'text-green-600' : 'text-red-600';
