--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
     let currentSort = { key: 'alphaScore', dir: 'desc' };
     let currentUser = null;
     let userWatchlist = new Set();
+    let comparisonSet = new Set(); // For CEO comparisons
     let currentView = 'all'; // 'all' or 'watchlist'
 
     // ---------- Helper Functions ----------
@@ -328,6 +329,21 @@
       } catch (error) {
         console.error('Error saving watchlist:', error);
       }
+    }
+
+    // ---------- Comparison Logic ----------
+    function toggleCompare(ticker) {
+      if (comparisonSet.has(ticker)) {
+        comparisonSet.delete(ticker);
+      } else {
+        if (comparisonSet.size >= 3) {
+          alert('You can compare a maximum of 3 CEOs at a time.');
+          return;
+        }
+        comparisonSet.add(ticker);
+      }
+      refreshView(); // Re-render to update button state
+      // We will add the comparison tray logic here later
     }
 
     async function toggleWatchlist(ticker) {
@@ -425,43 +441,55 @@
         const saved = userWatchlist.has(c.ticker);
         const watchlistStar = `<button class="watchlist-star text-2xl align-middle transition-colors ${saved ? 'text-yellow-400 hover:text-yellow-500' : 'text-gray-300 hover:text-yellow-400'}" data-ticker="${c.ticker}" title="${saved ? 'Remove from' : 'Add to'} watchlist">${saved ? '★' : '☆'}</button>`;
 
+        const isComparing = comparisonSet.has(c.ticker);
+        const compareButton = `
+          <button class="compare-btn p-1 rounded-md ${isComparing ? 'bg-blue-100 text-blue-700' : 'text-gray-400 hover:bg-gray-100'}" data-ticker="${c.ticker}" title="Add to Compare">
+            <svg class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor"><path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a1 1 0 011-1h14a1 1 0 110 2H3a1 1 0 01-1-1z"/></svg>
+          </button>
+        `;
+
         card.innerHTML = `
-          <div class="pt-6">
+          <div>
             <div class="absolute top-1 left-1">
                 ${watchlistStar}
             </div>
-            <div class="flex justify-between items-start space-x-2">
-              <div class="flex-1 min-w-0">
-                <h3 class="font-bold text-lg text-gray-900 truncate" title="${c.ceo}">${c.ceo}</h3>
-                ${founderBadge}
-                <p class="text-sm text-gray-600 font-bold truncate mt-1" title="${c.company} (${c.ticker})">${c.company} (${c.ticker})</p>
+            <div class="pt-6">
+              <div class="flex justify-between items-start space-x-2">
+                <div class="flex-1 min-w-0">
+                  <h3 class="font-bold text-lg text-gray-900 truncate" title="${c.ceo}">${c.ceo}</h3>
+                  ${founderBadge}
+                  <p class="text-sm text-gray-600 font-bold truncate mt-1" title="${c.company} (${c.ticker})">${c.company} (${c.ticker})</p>
+                </div>
+                <div class="flex flex-col items-end flex-shrink-0">
+                    <div class="text-right">
+                        <p class="text-xs text-gray-800 font-bold uppercase tracking-wider">AlphaScore</p>
+                        <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${Math.round(alphaScoreValue)}</p>
+                    </div>
+                    <div class="mt-1 h-6">${quartileBadge}</div>
+                </div>
               </div>
-              <div class="flex flex-col items-end flex-shrink-0">
-                  <div class="text-right">
-                      <p class="text-xs text-gray-800 font-bold uppercase tracking-wider">AlphaScore</p>
-                      <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${Math.round(alphaScoreValue)}</p>
-                  </div>
-                  <div class="mt-1 h-6">${quartileBadge}</div>
-              </div>
-            </div>
-            <div class="mt-4 pt-3 border-t border-gray-200 flex justify-between text-right">
-              <div>
-                <p class="text-xs text-gray-500" title="Total Shareholder Return vs. QQQ">TSR vs QQQ</p>
-                <p class="font-semibold text-sm ${tsrAlphaCol}">${pct(c.tsrAlpha)}</p>
-              </div>
-              <div>
-                <p class="text-xs text-gray-500">Compensation</p>
-                <p class="font-semibold text-sm">$${money(c.compensation, 1)}M</p>
-              </div>
-              <div>
-                <p class="text-xs text-gray-500" title="Average Annual TSR vs. QQQ">Avg Ann. TSR vs QQQ</p>
-                <p class="font-semibold text-sm ${avgAlphaCol}">${pct(c.avgAnnualTsrAlpha)}</p>
+              <div class="mt-4 pt-3 border-t border-gray-200 flex justify-between text-center text-right">
+                <div>
+                  <p class="text-xs text-gray-500" title="Total Shareholder Return vs. QQQ">TSR vs QQQ</p>
+                  <p class="font-semibold text-sm ${tsrAlphaCol}">${pct(c.tsrAlpha)}</p>
+                </div>
+                <div>
+                  <p class="text-xs text-gray-500">Compensation</p>
+                  <p class="font-semibold text-sm">$${money(c.compensation, 1)}M</p>
+                </div>
+                <div>
+                  <p class="text-xs text-gray-500" title="Average Annual TSR vs. QQQ">Avg Ann. TSR vs QQQ</p>
+                  <p class="font-semibold text-sm ${avgAlphaCol}">${pct(c.avgAnnualTsrAlpha)}</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="mt-4 pt-2 border-t border-gray-100 text-xs text-blue-600 font-semibold flex justify-between items-center">
-              <span>View Details</span>
-              <span class="text-lg">→</span>
+          <div class="mt-4 pt-2 border-t border-gray-100 text-xs flex justify-between items-center">
+              ${compareButton}
+              <a href="#" class="details-link text-blue-600 font-semibold flex items-center">
+                <span>View Details</span>
+                <span class="text-lg ml-1">→</span>
+              </a>
           </div>
         `;
         
@@ -601,9 +629,16 @@
       ceoCardView.addEventListener('click', (e) => {
           const star = e.target.closest('.watchlist-star');
           if (star) {
-              e.stopPropagation(); // Prevent the card click from firing
+              e.stopPropagation();
               toggleWatchlist(star.dataset.ticker);
               return; 
+          }
+
+          const compareBtn = e.target.closest('.compare-btn');
+          if (compareBtn) {
+              e.stopPropagation();
+              toggleCompare(compareBtn.dataset.ticker);
+              return;
           }
 
           const card = e.target.closest('.ceo-card');
