--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     <div class="mt-1 h-6">${quartileBadge}</div>
                 </div>
               </div>
-              <div class="mt-4 pt-3 border-t border-gray-200 flex justify-between text-left">
+              <div class="mt-4 pt-3 border-t border-gray-200 flex justify-between text-center">
                 <div>
                   <p class="text-xs text-gray-500" title="Total Shareholder Return vs. QQQ">TSR vs QQQ</p>
                   <p class="font-semibold text-sm ${tsrAlphaCol}">${pct(c.tsrAlpha)}</p>
