--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 <p class="font-semibold text-sm ${tsrAlphaCol}">${pct(c.tsrAlpha)}</p>
               </div>
               <div>
-                <p class="text-xs text-gray-500">Compensation</p>
+                <p class="text-xs text-gray-500">CEO Comp</p>
                 <p class="font-semibold text-sm">$${money(c.compensation, 1)}M</p>
               </div>
               <div>
