--- a/index.html
+++ b/index.html
@@ -426,42 +426,46 @@
         const watchlistStar = `<button class="watchlist-star text-2xl align-middle transition-colors ${saved ? 'text-yellow-400 hover:text-yellow-500' : 'text-gray-300 hover:text-yellow-400'}" data-ticker="${c.ticker}" title="${saved ? 'Remove from' : 'Add to'} watchlist">${saved ? '★' : '☆'}</button>`;
 
         card.innerHTML = `
-          <div class="pt-6">
+          <div>
             <div class="absolute top-1 left-1">
                 ${watchlistStar}
             </div>
-            <div class="flex justify-between items-start space-x-2">
-              <div class="flex-1 min-w-0">
-                <h3 class="font-bold text-lg text-gray-900 truncate" title="${c.ceo}">${c.ceo}</h3>
-                ${founderBadge}
-                <p class="text-sm text-gray-600 font-bold truncate mt-1" title="${c.company} (${c.ticker})">${c.company} (${c.ticker})</p>
+            <div class="pt-6">
+              <div class="flex justify-between items-start space-x-2">
+                <div class="flex-1 min-w-0">
+                  <h3 class="font-bold text-lg text-gray-900 truncate" title="${c.ceo}">${c.ceo}</h3>
+                  ${founderBadge}
+                  <p class="text-sm text-gray-600 font-bold truncate mt-1" title="${c.company} (${c.ticker})">${c.company} (${c.ticker})</p>
+                </div>
+                <div class="flex flex-col items-end flex-shrink-0">
+                    <div class="text-right">
+                        <p class="text-xs text-gray-800 font-bold uppercase tracking-wider">AlphaScore</p>
+                        <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${Math.round(alphaScoreValue)}</p>
+                    </div>
+                    <div class="mt-1 h-6">${quartileBadge}</div>
+                </div>
               </div>
-              <div class="flex flex-col items-end flex-shrink-0">
-                  <div class="text-right">
-                      <p class="text-xs text-gray-800 font-bold uppercase tracking-wider">AlphaScore</p>
-                      <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${Math.round(alphaScoreValue)}</p>
-                  </div>
-                  <div class="mt-1 h-6">${quartileBadge}</div>
-              </div>
-            </div>
-            <div class="mt-4 pt-3 border-t border-gray-200 flex justify-between text-right">
-              <div>
-                <p class="text-xs text-gray-500" title="Total Shareholder Return vs. QQQ">TSR vs QQQ</p>
-                <p class="font-semibold text-sm ${tsrAlphaCol}">${pct(c.tsrAlpha)}</p>
-              </div>
-              <div>
-                <p class="text-xs text-gray-500">CEO Comp</p>
-                <p class="font-semibold text-sm">$${money(c.compensation, 1)}M</p>
-              </div>
-              <div>
-                <p class="text-xs text-gray-500" title="Average Annual TSR vs. QQQ">Avg Ann. TSR vs QQQ</p>
-                <p class="font-semibold text-sm ${avgAlphaCol}">${pct(c.avgAnnualTsrAlpha)}</p>
+              <div class="mt-4 pt-3 border-t border-gray-200 sm:flex sm:justify-between sm:text-right">
+                <div class="flex justify-between sm:block sm:text-left">
+                  <p class="text-xs text-gray-500" title="Total Shareholder Return vs. QQQ">TSR vs QQQ</p>
+                  <p class="font-semibold text-sm ${tsrAlphaCol}">${pct(c.tsrAlpha)}</p>
+                </div>
+                <div class="flex justify-between sm:block sm:text-center">
+                  <p class="text-xs text-gray-500">CEO Comp</p>
+                  <p class="font-semibold text-sm">$${money(c.compensation, 1)}M</p>
+                </div>
+                <div class="flex justify-between sm:block sm:text-right">
+                  <p class="text-xs text-gray-500" title="Average Annual TSR vs. QQQ">Avg Ann. TSR vs QQQ</p>
+                  <p class="font-semibold text-sm ${avgAlphaCol}">${pct(c.avgAnnualTsrAlpha)}</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="mt-4 pt-2 border-t border-gray-100 text-xs text-blue-600 font-semibold flex justify-between items-center">
-              <span>View Details</span>
-              <span class="text-lg">→</span>
+          <div class="mt-4 pt-2 border-t border-gray-100 text-xs flex justify-end items-center">
+              <a href="#" class="details-link text-blue-600 font-semibold flex items-center">
+                <span>View Details</span>
+                <span class="text-lg ml-1">→</span>
+              </a>
           </div>
         `;
         
