--- a/index.html
+++ b/index.html
@@ -188,18 +188,17 @@
   </div>
 
   <div id="comparisonTray" class="hidden fixed bottom-0 left-0 right-0 bg-white shadow-2xl border-t border-gray-200 z-40">
-    <div class="container mx-auto p-4 flex justify-between items-center">
-      <div class="flex items-center space-x-3">
+    <div class="container mx-auto p-3 text-center sm:p-4 sm:text-left sm:flex sm:justify-between sm:items-center">
+      <div class="flex items-center justify-center sm:justify-start space-x-3">
         <span id="comparisonTitle" class="font-semibold text-gray-700">Compare (0/3):</span>
         <div id="trayTickers" class="flex items-center space-x-2">
           </div>
-      </div>
-      <button id="compareNowBtn" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700 transition">
-        Compare Now →
-      </button>
     </div>
+    <button id="compareNowBtn" class="w-full mt-2 sm:w-auto sm:mt-0 bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700 transition">
+      Compare Now →
+    </button>
   </div>
-
+</div>
 
   <script src="firebase-config.js"></script>
 
